[package]
name = "uamp"
version = "0.6.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
no-self-update = []

[workspace]
members = [
    "uamp_proc"
]

[dependencies]
anyhow = "1.0.100"
astral-tokio-tar = "0.5.6"
ratag = "0.1.0"
bitflags = { version = "2.10.0", features = [ "serde" ] }
const_format = { version = "0.2.35", features = [ "fmt" ] }
dirs = "6.0.0"
edit = { version = "0.1.5", features = [ "quoted-env" ] }
filesan = "0.2.0"
flexi_logger = "0.31.7"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.18", features = ["tokio"] }
image = "0.25.9"
itertools = "0.14.0"
libloading = "0.9.0"
log = "0.4.28"
mime_guess = "2.0.5"
notify = "8.2.0"
open = "5.3.3"
pareg ="0.11.1"
# pareg = { path = "../pareg" }
rand = "0.9.2"
raplay = { version = "0.4.3", features = ["serde"] }
# raplay = { path = "../raplay", features = ["serde"] }
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.145"
shell-words = "1.1.0"
termal = { version =  "4.1.0", features = ["image", "raw", "events"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "sync", "signal", "macros", "net", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
unidecode = "0.3.0"
url = "2.5.7"
uamp_proc = { path = "uamp_proc" }

[target.'cfg(unix)'.dependencies]
mpris-server = "0.9.0"
